[package]
name = "audiolinkd"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
opus = "0.3"
ringbuf = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rubato = "0.15"
ureq = { version = "2", features = ["tls"] }
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
